added sign handler
