# backend/model/http/requests/authRequests.ts
@@ -1,6 +1,11 @@
-export interface ISignInPayload {
+export interface ISignUpPayload {
     firstName: string,
     lastName: string,
+    email: string,
+    password: string
+}
+
+export interface ISignInPayload {
     email: string,
     password: string
 }
