# backend/model/http/responses/loginResult.ts
@@ -1,0 +1,6 @@
+export interface LoginResult {
+    firstName: string,
+    lastName: string,
+    email: string,
+    token: string
+}
