# backend/validation/auth.ts
@@ -1,11 +1,17 @@
 import Joi from 'joi';
 
 export const auth = {
-    register: Joi.object({
+    signUp: Joi.object({
         body: {
             firstName: Joi.string().required(),
             lastName: Joi.string().required(),
             email: Joi.string().email().required(),
+            password: Joi.string().required()
+        }
+    }),
+    signIn: Joi.object({
+        body: {
+            email: Joi.string().required(),
             password: Joi.string().required()
         }
     })
